--- a/android/app/src/main/res/layout/activity_onboarding.xml
+++ b/android/app/src/main/res/layout/activity_onboarding.xml
@@ -45,5 +45,12 @@
         android:id="@+id/tvSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Skip"
+        android:textColor="#64748B"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
